<resources>
    <string name="app_name">ATB Shop</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_image">Choose image</string>
    <string name="sign_up">Sign up</string>
    <string name="users">Users</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_connect_again">Try connect again</string>
    <string name="update">Update</string>
</resources>