<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.EditUserActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="4"
        android:rowCount="8"
        android:layout_margin="10dp"
        android:useDefaultMargins="true">

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.2"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:text="@string/update"
                    android:textSize="24sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.4"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userEditTextInputFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEditTextEditFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.2"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userEditTextInputSecondName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/second_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEditTextEditSecondName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.4"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userEditTextInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEditTextEditEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.4"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userEditTextInputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEditTextEditPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.7"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/userEditPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"

                    android:scaleType="centerCrop" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.4"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/BSelectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onEditUserOnSelectPhotoBtnClick"
                    android:text="@string/choose_image" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.3"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="onEditUserBtnClick"
                    android:text="@string/update" />
            </RelativeLayout>
        </RelativeLayout>


    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>