<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.LoginActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="4"
        android:rowCount="4"
        android:layout_margin="10dp"
        android:useDefaultMargins="true">

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login"
                    android:textSize="24sp" />
            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginTextInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginTextEditEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginTextInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginTextEditPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="3"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="onLoginBtnClick"
                    android:text="@string/login" />
            </RelativeLayout>
        </RelativeLayout>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>