<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="4"
        android:rowCount="8"
        android:layout_margin="10dp"
        android:useDefaultMargins="true">

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.8"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewUserInformation"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="User information"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </RelativeLayout>
        </RelativeLayout>
        //First name

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUserInfoFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textEditUserInfoFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>

        //Second name

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUserInfoSecondName"
                    android:hint="@string/second_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textEditUserInfoSecondName"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>
        //Email

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/textInputUserInfoEmail"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textEditUserInfoEmail"
                        android:inputType="textEmailAddress"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>
        //Phone

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUserInfoPhone"
                    android:hint="@string/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textEditUserInfoPhone"
                        android:inputType="phone"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="3"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/userInfoPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="245dp"
                    android:scaleType="centerCrop" />
            </RelativeLayout>
        </RelativeLayout>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>